# PubChemPy2

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yaml  tests.yml
pubchempy2/: abstract.py  errors.py  literals.py  models.py  pubchempy.py  search.py  types.py  validators.py
tests/: test_assay.py  test_compound.py  test_compound3d.py  test_download.py  test_errors.py  test_identifiers.py  test_pandas.py  test_properties.py  test_requests.py  test_search.py  test_sources.py  test_substance.py
